public/stylesheets/styles.css
/* ... */
/* FFS */
.s-base--metro .o-primary-btn--respec-active,
.t-s1 .o-primary-btn--respec-active,
.t-s6 .o-primary-btn--respec-active,
.t-s10 .o-primary-btn--respec-active {
  background-color: #673ab7;
}

.s-base--metro .o-primary-btn--respec-active:hover,
.t-s1 .o-primary-btn--respec-active:hover,
.t-s6 .o-primary-btn--respec-active:hover,
.t-s10 .o-primary-btn--respec-active:hover {
  background-color: #673ab7;
  color: black;
}

.s-base--metro .o-primary-btn--discharge-active,
.t-s1 .o-primary-btn--discharge-active,
.t-s6 .o-primary-btn--discharge-active,
.t-s10 .o-primary-btn--discharge-active {
  background-color: #673ab7;
}

.s-base--metro .o-primary-btn--discharge-active:hover,
.t-s1 .o-primary-btn--discharge-active:hover,
.t-s6 .o-primary-btn--discharge-active:hover,
.t-s10 .o-primary-btn--discharge-active:hover {
  background-color: #673ab7;
  color: black;
}

/*#endregion t-s6 t-s10*/

/*#endregion themes*/

/*#endregion o-primary-btn*/

/*#region c-subtab-option-container*/

.c-subtab-option-container {
  display: flex;
  flex-direction: row;
  padding-bottom: 0.8rem;
}

.s-base--metro .c-subtab-option-container {
  border-width: 0.1rem;
  border-radius: 0;
}

/*#endregion c-subtab-option-container*/

/*#region o-prestige-button*/

.o-prestige-button {
  border: 0.2rem solid;
  border-radius: 0.4rem;
  transition-duration: 0.2s;
  cursor: pointer;
  width: 22rem;
  height: 7rem;
  font-size: 1.1rem;
  font-family: Typewriter, serif;
}

.o-prestige-button br {
  pointer-events: none;
}

.o-prestige-button b {
  pointer-events: none;
}

/*#region Big Crunch*/

.o-infinity-button {
  color: var(--color-infinity);
  background-color: black;
  border-color: var(--color-infinity);
  font-weight: bold;
}

.o-infinity-button:hover {
  color: black;
  background-color: var(--color-infinity);
}

.o-infinity-button span {
  transition-duration: 0.2s;
}

.o-infinity-button:hover span {
  color: black;
}

.s-base--metro .o-infinity-button {
  border-width: 0.1rem;
  border-radius: 0;
  box-shadow: 0.1rem 0.1rem 0.1rem 0 #9e9e9e;
}

.t-dark-metro .o-infinity-button {
  box-shadow: 1px 1px 1px 0 black;
}

.o-infinity-button--unavailable {
  cursor: default;
  opacity: 0.5;
}

/*#region Eternity*/

.o-eternity-button {
  color: var(--color-eternity);
  background-color: black;
  border-color: var(--color-eternity);
  font-weight: bold;
}

.o-eternity-button:hover {
  color: black;
  background-color: var(--color-eternity);
  cursor: pointer;
}

.o-eternity-button span {
  transition-duration: 0.2s;
}

.o-eternity-button:hover span {
  color: black;
}

.t-s1 .o-eternity-button:hover span {
  color: var(--color-text);
}

.s-base--metro .o-eternity-button {
  border-width: 0.1rem;
  border-radius: 0;
}

.t-s1 .o-eternity-button:hover {
  color: black;
  border-color: black;
}

.o-eternity-button--dilation {
  color: var(--color-dilation);
  background-color: black;
  border-color: var(--color-dilation);
  font-weight: bold;
}

.o-eternity-button--dilation:hover {
  color: black;
  background-color: var(--color-dilation);
}

.o-eternity-button--dilation span {
  transition-duration: 0.2s;
}

.o-eternity-button--dilation:hover span {
  color: black;
}

.t-s1 .o-eternity-button--dilation:hover span {
  color: var(--color-text);
}

.s-base--metro .o-eternity-button--dilation {
  border-width: 0.1rem;
  border-radius: 0;
}

.t-s1 .o-eternity-button--dilation:hover {
  color: black;
  background: var(--color-dilation);
  border-color: black;
}

.o-eternity-button--unavailable {
  cursor: default;
  opacity: 0.5;
}

/*#endregion Eternity*/

/*#endregion Big Crunch*/

/*#endregion o-prestige-btn*/

/*#region l-spoon-btn-group*/

.l-spoon-btn-group {
  display: flex;
  flex-direction: column;
}

.l--spoon-btn-group__little-spoon {
  align-self: stretch;
  margin-top: 0.3rem;
}

.l--spoon-btn-group__little-spoon-reality-btn {
  width: 20rem;
  align-self: center;
  margin-top: -0.9rem;
  margin-bottom: 1.2rem;
}

/*#endregion l-spoon-btn-group*/

.o-big-checkbox {
  width: 2rem;
  height: 1.8rem;
}

/*#region hint-text*/

.o-dim-path-priority {
  font-size: 1.55rem;
  color: white;
  text-shadow:
    -0.1rem -0.1rem 0 black,
    -0.1rem -0.1rem 0 black,
    0.1rem -0.1rem 0 black,
    0.1rem -0.1rem 0 black,
    -0.1rem 0.1rem 0 black,
    -0.1rem 0.1rem 0 black,
    0.1rem 0.1rem 0 black,
    0.1rem 0.1rem 0 black;
  pointer-events: none;
}

.l-hint-text--challenge {
  top: -2.2rem;
}

.l-hint-text--time-study {
  top: -1.95rem;
}

.l-hint-text--reality-upgrade {
  font-size: 1.25rem;
  top: -1.7rem;
}

.c-hint-text--reality-upgrade {
  color: var(--color-text);
  text-shadow: none;
  font-weight: bold;
}

.l-hint-text--achievement {
  top: -2rem;
  z-index: 1;
}

.o-hint-text--alchemy-node {
  color: #4f5957;
  text-shadow: none;
  font-size: 1.2rem;
  transition: opacity 0.2s;
}

.o-hint-text--alchemy-node--unfocused {
  opacity: 0;
}

.l-hint-text--alchemy-node {
  top: 2.6rem;
  left: 50%;
  transform: translate(-50%);
}

/*#endregion hint-text*/

/*#region Header*/

.l-game-header__amounts-line {
  position: relative;
  font-size: 1.2rem;
}

/*#region IP Amount*/

.l-game-header__infinity-points {
  position: absolute;
  left: 75%;
}

.c-game-header__infinity-points {
  font-size: 1.2rem;
  width: 21rem;
}

.c-game-header__tesseract-available {
  border-width: 0.2rem solid;
  border-radius: 0;
  padding: 1rem;
  margin-bottom: 1.2rem;
  font-family: TypeWriter, serif;
  background: #111117;
  color: #2ebce6;
  cursor: pointer;
  transition-duration: 0.15s;
  animation: a-tesseract-shift 5s infinite;
}

.s-base--dark .c-game-header__tesseract-available {
  background: #EEEEEE;
  animation: a-tesseract-shift-dark 5s infinite;
}

.c-infinity-dim-tab__tesseract-available:hover {
  background: black;
  color: #00c5ff;
}

.s-base--dark .c-infinity-dim-tab__tesseract-available:hover {
  background: white;
}


.c-game-header__ip-amount {
  font-weight: bold;
}
/* ... */

